--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://kit.fontawesome.com/2a34b16d48.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     
-    <title>Celebrate Lil McHenry</title>
+    <title>Celebrate Earl Baumgartner</title>
 
     
 </head>
@@ -27,9 +27,9 @@
         <div id="text">
             <h2>CELEBRATE</h2>
             <h1>
-                Lillian<br>
-                Hosken<br>
-                McHenry
+                Earl<br>
+                Melville<br>
+                Baumgartner
             </h1>
         </div>
     </div>
@@ -40,9 +40,9 @@
         But what matters most of all is<br>
         the little dash between those years.<br>
         For that dash represents all the time<br>
-        she spent alive on earth.</p>
+        he spent alive on earth.</p>
 
-        <p>Those of us who knew and loved her<br>
+        <p>Those of us who knew and loved him<br>
             know what that little line is worth.<br>
         A life very well lived!</p>
     </section>
@@ -63,8 +63,8 @@
     </section>
 
     <section id="obituary">
-        <h1>Lillian<br>Hosken<br>McHenry</h1>
-        <h2>NOVEMBER 3, 1924 - JUNE 20, 2022</h2>
+        <h1>Earl<br>Melville<br>Baumgartner</h1>
+        <h2>NOVEMBER 17, 1934 - NOVEMBER 16, 2023</h2>
         <p>A remarkable and dearly loved woman, mother, grandmother, and great-grandmother found a peaceful end following a fall that quelled her strong desire for independence. Lillian was known as quite a character among friends and family. She upheld a clear notion of what the correct manner was for every aspect of living and presented her firm opinions with a wonderful sense of humor. She regarded her family and friends as her most treasured gifts in life and was passionate about their well-being. Lil had little capacity for unfairness and suffering especially with children and animals.</p>
         <p>She was a mother figure to many. She adored her daughters Lyndie (Roger) Boulton and Laurie (Mark) Radcliff, grandchildren Katie (AJ) Ramsey, Thomas (Tiffany) Radcliff, Christina (Jason Lowe), Andrew (Edward) and Cameron (Ashley) Boulton, and great grandchildren Mia and Nic Ramsey, Lauren and Jace Radcliff, Audrey and Jackson Lowe, and Arlo Boulton. She delighted in knowing Arlo will have a baby sister in October.</p>
         <p>She grew up in Alameda and on her family ranch in Indian Valley, CA with a love of horses and various pets along the way. Lil and Jim married in 1945 and raised their family in Davis.  She was an active tennis player, swimmer, and bridge player in earlier years.  She and Jim enjoyed visiting Europe, Australia, New Zealand and parts of the U.S. with a tour group. Her husband Jim, parents William M. and Vera Medau Hosken, brother William E. Hosken, and nephew Edward (Ned) Hosken pre-deceased her. She is also survived by five Hosken nieces and many other family members.</p>
