--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     
     <div class="container">
-        <img class="heroimage" src="https://amandavalverde.github.io/celebratelilmchenry/heroimage.JPEG">
+        <img class="heroimage" src="earl.jpg">
    
         <div id="text">
             <h2>CELEBRATE</h2>
@@ -50,7 +50,7 @@
     <section id="slideshow-container">
         <div id="slideshow">
             <div>
-              <img src="https://amandavalverde.github.io/celebratelilmchenry/001.jpg" class="wide">
+              <img src="001.jpg" class="wide">
             </div>
         </div>
       <div id="button">
