--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     
     <div class="container">
-        <img class="heroimage" src="earl.jpg">
+        <img class="heroimage" src="Earl.jpg">
    
         <div id="text">
             <h2>CELEBRATE</h2>
