--- a/index.html
+++ b/index.html
@@ -35,16 +35,43 @@
     </div>
 
     <section id="dash">
-        <p>First comes the date of birth<br>
-        followed by the date of death.<br>
-        But what matters most of all is<br>
-        the little dash between those years.<br>
-        For that dash represents all the time<br>
-        he spent alive on earth.</p>
+        
 
-        <p>Those of us who knew and loved him<br>
-            know what that little line is worth.<br>
-        A life very well lived!</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <p>A life well lived is a precious gift<br>
+        Of hope and strength and grace,<br>
+        From someone who has made our world<br>
+        A brighter, better place<br>
+        It’s filled with moments, sweet and sad<br>
+        With smiles and sometimes tears,<br>
+        With friendships formed and good times shared<br>
+        And laughter through the years.<br>
+        A life well lived is a legacy<br>
+        Of joy and pride and pleasure,<br>
+        A living, lasting memory<br>
+        Our grateful hearts will treasure.<br>
+        </p>
+
+        <p>A Life Well Lived - Anonymous</p>
     </section>
     
     <section id="slideshow-container">
