--- a/index.html
+++ b/index.html
@@ -35,28 +35,8 @@
     </div>
 
     <section id="dash">
+        <p><b>A Life Well Lived - Anonymous</b></p>
         
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         <p>A life well lived is a precious gift<br>
         Of hope and strength and grace,<br>
         From someone who has made our world<br>
@@ -70,8 +50,6 @@
         A living, lasting memory<br>
         Our grateful hearts will treasure.<br>
         </p>
-
-        <p>A Life Well Lived - Anonymous</p>
     </section>
     
     <section id="slideshow-container">
