Standardize on jpeg extension

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <section id="slideshow-container">
         <div id="slideshow">
             <div>
-              <img src="001.jpg" class="wide">
+              <img src="001.jpeg" class="wide">
             </div>
         </div>
       <div id="button">
