--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
         </div>
     </div>
 
-    <section id="directions">
+    <!-- <section id="directions">
         <h3><b>Memorial Service at 2PM, December 17th, 2023:</b></h3>
         <h2>Lansdale Seventh-day Adventist Church </br>887 Troxel Rd.</br>Lansdale, PA 19446</h2>
 
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3045.3052994359696!2d-75.31824148800821!3d40.24674586584798!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6a23dafc4270b%3A0x82f390175b00c2bd!2sLansdale%20Seventh-Day%20Adventist%20Church!5e0!3m2!1sen!2sus!4v1702393365444!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </section>
+    </section> -->
 
     <section id="livestream">
-        <h3><b>Memorial Service Livestream:</b></h3>
+        <h3><b>Memorial Service Livestream at 2PM, December 17th, 2023:</b></h3>
     </br></br>
     <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/tGOLw4KXITc?si=5Hp8RMMZdu11HnWl" title="Memorial Service for Earl Baumgartner" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </section>
