--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
         </br></br>
         <h2>Lansdale Seventh-day Adventist Church </br>887 Troxel Rd.</br>Lansdale, PA 19446</h2>
         </br></br>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3045.3052994359696!2d-75.31824148800821!3d40.24674586584798!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6a23dafc4270b%3A0x82f390175b00c2bd!2sLansdale%20Seventh-Day%20Adventist%20Church!5e0!3m2!1sen!2sus!4v1702393365444!5m2!1sen!2sus" style="border:0; width: min(50vw, 600px); height: min(50vw, 394px); " allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe style="border:0; width: min(70vw, 600px); height: min(50vw, 394px);" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3045.3052994359696!2d-75.31824148800821!3d40.24674586584798!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6a23dafc4270b%3A0x82f390175b00c2bd!2sLansdale%20Seventh-Day%20Adventist%20Church!5e0!3m2!1sen!2sus!4v1702393365444!5m2!1sen!2sus" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
 
     <section id="livestream">
         <h3><b>Memorial Service Livestream (starts 2pm, Dec. 17th):</b></h3>
     </br></br>
-    <iframe style="width: min(50vw, 700px); height: min(50vw, 394px);" src="https://www.youtube-nocookie.com/embed/tGOLw4KXITc?si=5Hp8RMMZdu11HnWl" title="Memorial Service for Earl Baumgartner" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe style="width: min(70vw, 700px); height: min(50vw, 394px);" src="https://www.youtube-nocookie.com/embed/tGOLw4KXITc?si=5Hp8RMMZdu11HnWl" title="Memorial Service for Earl Baumgartner" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </section>
 
     <section id="dash">
