--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://kit.fontawesome.com/2a34b16d48.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     
-    <title>Celebrate Earl Baumgartner</title>
+    <title>Earl M Baumgartner Memorial| 1934 - 2023 | Collegeville, PA</title>
 
     
 </head>
