Add meta description for SEO

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Earl M Baumgartner | 1934 - 2023 | Collegeville, PA</title>
+    <meta name="description" content="Earl was a devout follower of Jesus and lifelong Seventh-day Adventist. Memorial service livestreaming on November 17th, 2023 at 2:00pm Eastern time.">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,10 +14,6 @@
 
     <script src="https://kit.fontawesome.com/2a34b16d48.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-    
-    <title>Earl M Baumgartner Memorial| 1934 - 2023 | Collegeville, PA</title>
-
-    
 </head>
 
 <body>
