--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
         </div>
     </div>
 
+    <section id="upload">
+        <h2>Upload Video Tribute or Images of you and Earl for Memorial:</h2>
+        <div id="filesubmit">
+            <input type="file" class="file-select" accept="video/mp4,video/x-m4v,video/quicktime,video/*,audio/x-m4a,audio/*,image/*"/>
+            <button class="file-submit">SUBMIT</button>
+        </div>
+    </section>
+
     <section id="directions">
         <h3><b>Memorial Service at 2PM, December 17th, 2023:</b></h3>
         </br></br>
@@ -95,5 +103,38 @@
     </footer>
 
     <script src="script.js"></script>
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+        const firebaseConfig = {
+          apiKey: "AIzaSyD-nPtV9JMX5y32rT3hzGvrRcwircWG28U",
+          authDomain: "earl-tribute.firebaseapp.com",
+          projectId: "earl-tribute",
+          storageBucket: "earl-tribute.appspot.com",
+          messagingSenderId: "244130771211",
+          appId: "1:244130771211:web:f9969f45f5a4f039aff20e"
+        };
+        const app = initializeApp(firebaseConfig);
+        const storageService = firebase.storage();
+        const storageRef = storageService.ref();
+        let selectedFile;
+        handleFileUploadChange(e) {
+            selectedFile = e.target.files[0];
+        }
+        handleFileUploadSubmit(e) {  
+            const uploadTask = storageRef.child(`images/${selectedFile.name}`).put(selectedFile);
+            //create a child directory called images, and place the file inside this directory  
+            uploadTask.on('state_changed', (snapshot) => {
+            // Observe state change events such as progress, pause, and resume
+            }, (error) => {
+                // Handle unsuccessful uploads
+                console.log(error);
+            }, () => {
+                // Do something once upload is complete
+                alert('Upload finished, thank you for uploading a tribute video or image for Earl!');
+            });
+        }
+        document.querySelector('.file-select).addEventListener('change', handleFileUploadChange);
+        document.querySelector('.file-submit).addEventListener('click', handleFileUploadSubmit);
+    </script>
 </body>
 </html>
