--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@
             selectedFile = e.target.files[0];
         }
         handleFileUploadSubmit(e) {  
-            const uploadTask = storageRef.child(`images/${selectedFile.name}`).put(selectedFile);
-            //create a child directory called images, and place the file inside this directory  
+            const uploadTask = storageRef.child(`${selectedFile.name}`).put(selectedFile);
             uploadTask.on('state_changed', (snapshot) => {
             // Observe state change events such as progress, pause, and resume
             }, (error) => {
