Add heic and styling to upload section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section id="upload">
         <h2>Upload Video Tribute or Images of you and Earl for Memorial:</h2>
         <div id="filesubmit">
-            <input type="file" class="file-select" accept="video/mp4,video/x-m4v,video/quicktime,video/*,audio/x-m4a,audio/*,image/*"/>
+            <input type="file" class="file-select" accept="video/mp4,video/x-m4v,video/quicktime,video/*,audio/x-m4a,audio/*,image/*,.heic,.heif"/>
             <button class="file-submit">SUBMIT</button>
         </div>
     </section>
