--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
 
     <script src="script.js"></script>
     <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+        import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js'
+        import { getStorage } from "firebase/storage";
         const firebaseConfig = {
           apiKey: "AIzaSyD-nPtV9JMX5y32rT3hzGvrRcwircWG28U",
           authDomain: "earl-tribute.firebaseapp.com",
@@ -113,7 +114,7 @@
           messagingSenderId: "244130771211",
           appId: "1:244130771211:web:f9969f45f5a4f039aff20e"
         };
-        const app = initializeApp(firebaseConfig);
+        const firebase = initializeApp(firebaseConfig);
         // File upload logic
         const storageService = firebase.storage();
         const storageRef = storageService.ref();
