--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
 
     <script src="script.js"></script>
     <script type="module">
-        import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js'
-        import { getStorage } from "firebase/storage";
+        import { initializeApp, getStorage, ref, uploadBytesResumable, getDownloadURL } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js'
         const firebaseConfig = {
           apiKey: "AIzaSyD-nPtV9JMX5y32rT3hzGvrRcwircWG28U",
           authDomain: "earl-tribute.firebaseapp.com",
@@ -114,18 +113,29 @@
           messagingSenderId: "244130771211",
           appId: "1:244130771211:web:f9969f45f5a4f039aff20e"
         };
-        const firebase = initializeApp(firebaseConfig);
+        const app = initializeApp(firebaseConfig);
         // File upload logic
-        const storageService = firebase.storage();
-        const storageRef = storageService.ref();
+        const storage = getStorage(app);
         let selectedFile;
         function handleFileUploadChange(e) {
             selectedFile = e.target.files[0];
         }
-        function handleFileUploadSubmit(e) {  
-            const uploadTask = storageRef.child(`tributes/${selectedFile.name}`).put(selectedFile);
+        function handleFileUploadSubmit(e) {
+                    // Upload file and metadata to the object 'images/mountains.jpg'
+            const storageRef = ref(storage, 'tributes/' + selectedFile.name);
+            const uploadTask = uploadBytesResumable(storageRef, selectedFile);
             uploadTask.on('state_changed', (snapshot) => {
-            // Observe state change events such as progress, pause, and resume
+                // Get task progress, including the number of bytes uploaded and the total number of bytes to be uploaded
+                const progress = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
+                console.log('Upload is ' + progress + '% done');
+                switch (snapshot.state) {
+                case 'paused':
+                    console.log('Upload is paused');
+                    break;
+                case 'running':
+                    console.log('Upload is running');
+                    break;
+                }
             }, (error) => {
                 // Handle unsuccessful uploads
                 console.log(error);
