--- a/index.html
+++ b/index.html
@@ -35,13 +35,15 @@
     <section id="upload">
         <h2>Upload Video Tribute or Images of you and Earl for Memorial:</h2>
         <div id="filesubmit">
+            <label for="name_submitter">Your Name:</label>
+            <input type="text" id="name_submitter" name="name_submitter"></br></br>
             <input type="file" class="file-select" accept="video/mp4,video/x-m4v,video/quicktime,video/*,audio/x-m4a,audio/*,image/*,.heic,.heif"/>
-            <button class="file-submit">SUBMIT</button>
+            <button class="file-submit">Submit</button>
         </div>
     </section>
 
     <section id="directions">
-        <h3><b>Memorial Service at 2PM, December 17th, 2023:</b></h3>
+        <h3><b>Memorial Service at 2PM Eastern time, December 17th, 2023:</b></h3>
         </br></br>
         <h2>Lansdale Seventh-day Adventist Church </br>887 Troxel Rd.</br>Lansdale, PA 19446</h2>
         </br></br>
@@ -49,7 +51,7 @@
     </section>
 
     <section id="livestream">
-        <h3><b>Memorial Service Livestream (starts 2pm, Dec. 17th):</b></h3>
+        <h3><b>Memorial Service Livestream (starts 2pm Eastern time, Dec. 17th):</b></h3>
     </br></br>
     <iframe style="width: min(70vw, 700px); height: min(50vw, 394px);" src="https://www.youtube-nocookie.com/embed/tGOLw4KXITc?si=5Hp8RMMZdu11HnWl" title="Memorial Service for Earl Baumgartner" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </section>
