Add progress indicator and hide submit button when no file selected

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         <h2>Upload Video Tribute or Images of you and Earl for Memorial:</h2>
         <div id="filesubmit">
             <label for="name_submitter">Your Name:</label>
-            <input type="text" id="name_submitter" name="name_submitter"></br></br>
+            <input type="text" id="name_submitter" name="name_submitter"></br>
+            <progress id="file_progress" max="100" value="0" style="display: none;"></progress></br>
             <input type="file" class="file-select" accept="video/mp4,video/x-m4v,video/quicktime,video/*,audio/x-m4a,audio/*,image/*,.heic,.heif"/>
             <button class="file-submit">Submit</button>
         </div>
