Comment out disappearing cursor code, put Earl middle name back in title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Celebrate Earl Baumgartner | 1934 - 2023 | Collegeville, PA</title>
+    <title>Earl M Baumgartner | 1934 - 2023 | Collegeville, PA</title>
     <meta name="description" content="Earl was a devout follower of Jesus and lifelong Seventh-day Adventist. Memorial service livestreaming on November 17th, 2023 at 2:00pm Eastern time.">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
