--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             <input type="text" id="name_submitter" name="name_submitter"></br>
             <progress id="file_progress" max="100" value="0" style="display: none;"></progress></br>
             <input type="file" class="file-select" accept="video/mp4,video/x-m4v,video/quicktime,video/*,audio/x-m4a,audio/*,image/*,.heic,.heif"/>
-            <input class="file-submit" type="submit" value="Submit" />
+            </br>
+            <input class="file-submit" type="submit" value="Submit" disabled/>
         </div>
     </section>
 
