Add spacing for upload section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
     </div>
 
     <section id="upload">
-        <h2>Upload Video Tribute or Images of you and Earl for Memorial:</h2>
+        <h2><b>Have a message for Earl's family? Favorite memory or way Earl impacted your life? Upload Video Tribute or Picture below:</b></h2>
+        </br>
+        </br>
         <div id="filesubmit">
             <label for="name_submitter">Your Name:</label>
             <input type="text" id="name_submitter" name="name_submitter"></br>
