Put Your Name label above Name input

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </br>
         </br>
         <div id="filesubmit">
-            <label for="name_submitter">Your Name:</label>
+            <label for="name_submitter">Your Name:</label></br>
             <input type="text" id="name_submitter" name="name_submitter"></br>
             <progress id="file_progress" max="100" value="0" style="display: none;"></progress></br>
             <input type="file" class="file-select" accept="video/mp4,video/x-m4v,video/quicktime,video/*,audio/x-m4a,audio/*,image/*,.heic,.heif"/>
