--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
             <label for="name_submitter">Your Name:</label></br>
             <input type="text" id="name_submitter" name="name_submitter"></br>
             <progress id="file_progress" max="100" value="0" style="display: none;"></progress></br>
-            <input type="file" class="file-select" accept="video/mp4,video/x-m4v,video/quicktime,video/*,audio/x-m4a,audio/*,image/*,.heic,.heif"/>
+            <input type="file" class="file-select vjs-record vjs-device-button vjs-control vjs-icon-av-perm" accept="video/mp4,video/x-m4v,video/quicktime,video/*,audio/x-m4a,audio/*,image/*,.heic,.heif"/>
+            </br></br>
+            <div class="drop-zone">
+                <span class="drop-zone__prompt">Drop file here or click to upload</span>
+                <input type="file" name="myFile" class="drop-zone__input">
+            </div>
             </br></br>
             <input class="file-submit" type="submit" value="Submit" disabled/>
         </div>
