Disable drag and drop uploader

--- a/index.html
+++ b/index.html
@@ -42,11 +42,10 @@
             <progress id="file_progress" max="100" value="0" style="display: none;"></progress></br>
             <input type="file" class="file-select" accept="video/mp4,video/x-m4v,video/quicktime,video/*,audio/x-m4a,audio/*,image/*,.heic,.heif"/>
             </br></br>
-            <div class="drop-zone">
-                <span class="drop-zone__prompt">Drop photo or video here or click to record and upload</span>
+            <!-- <div class="drop-zone">
+                <span class="drop-zone__prompt">Drop photo or video here or click to record and</span>
                 <input type="file" name="myFile" class="drop-zone__input" accept="video/mp4,video/x-m4v,video/quicktime,video/*,audio/x-m4a,audio/*,image/*,.heic,.heif>
-            </div>
-            </br></br>
+            </div> -->
             <input class="file-submit" type="submit" value="Submit" disabled/>
         </div>
     </section>
