--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
             <input type="text" id="name_submitter" name="name_submitter"></br>
             <progress id="file_progress" max="100" value="0" style="display: none;"></progress></br>
             <div class="input_container">
-                <label for="files" class="btn browse-files">Record or Select Video or Photo</label>
+                <label for="files" class="btn browse-files">Record or Select Video or Photo</label></br>
                 <input type="file" id="files" style="opacity:0;" class="file-select" accept="video/mp4,video/x-m4v,video/quicktime,video/*,audio/x-m4a,audio/*,image/*,.heic,.heif">
             </div>
             <!-- <input type="file" class="file-select" accept="video/mp4,video/x-m4v,video/quicktime,video/*,audio/x-m4a,audio/*,image/*,.heic,.heif"/> -->
-            </br></br>
+            </br>
             <!-- <div class="drop-zone">
                 <span class="drop-zone__prompt">Drop photo or video here or click to record and</span>
                 <input type="file" name="myFile" class="drop-zone__input" accept="video/mp4,video/x-m4v,video/quicktime,video/*,audio/x-m4a,audio/*,image/*,.heic,.heif>
