Add custom browse files button styles

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <input type="text" id="name_submitter" name="name_submitter"></br>
             <progress id="file_progress" max="100" value="0" style="display: none;"></progress></br>
             <div class="input_container">
-                <label id="files_label" for="files" class="btn browse-files">Record or Select Video or Photo</label></br>
+                <label id="files_label" for="files" class="button3">Record or Select Video or Photo</label></br>
                 <input type="file" id="files" style="opacity:0;" class="file-select" accept="video/mp4,video/x-m4v,video/quicktime,video/*,audio/x-m4a,audio/*,image/*,.heic,.heif">
             </div>
             <!-- <input type="file" class="file-select" accept="video/mp4,video/x-m4v,video/quicktime,video/*,audio/x-m4a,audio/*,image/*,.heic,.heif"/> -->
@@ -50,7 +50,7 @@
                 <span class="drop-zone__prompt">Drop photo or video here or click to record and</span>
                 <input type="file" name="myFile" class="drop-zone__input" accept="video/mp4,video/x-m4v,video/quicktime,video/*,audio/x-m4a,audio/*,image/*,.heic,.heif>
             </div> -->
-            <input class="file-submit" type="submit" value="Submit" disabled/>
+            <input class="file-submit button3" type="submit" value="Submit" disabled/>
         </div>
     </section>
 
