--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <section id="upload">
-        <h2><b>Have a message for Earl's family? Favorite memory or way Earl impacted your life? Upload Video Tribute or Picture below:</b></h2>
+        <h2><b>Have a message for Earl's family? Favorite memory or way Earl impacted your life? </br>Upload Video Tribute or Picture below:</b></h2>
         </br>
         </br>
         <div id="filesubmit">
@@ -62,11 +62,24 @@
         <iframe style="border:0; width: min(70vw, 600px); height: min(50vw, 394px);" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3045.3052994359696!2d-75.31824148800821!3d40.24674586584798!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6a23dafc4270b%3A0x82f390175b00c2bd!2sLansdale%20Seventh-Day%20Adventist%20Church!5e0!3m2!1sen!2sus!4v1702393365444!5m2!1sen!2sus" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
 
-    <section id="livestream">
-        <h3><b>Memorial Service Livestream (starts 2pm Eastern time, Dec. 17th):</b></h3>
-    </br></br>
-    <iframe style="width: min(70vw, 700px); height: min(50vw, 394px);" src="https://www.youtube-nocookie.com/embed/tGOLw4KXITc?si=5Hp8RMMZdu11HnWl" title="Memorial Service for Earl Baumgartner" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    </section>
+    <div class="memorial-wrapper">
+        <section id="livestream">
+            <h3><b>Memorial Service Livestream (starts 2pm Eastern time, Dec. 17th):</b></h3>
+            </br></br>
+            <iframe style="width: min(70vw, 700px); height: min(50vw, 394px);" src="https://www.youtube-nocookie.com/embed/tGOLw4KXITc?si=5Hp8RMMZdu11HnWl" title="Memorial Service for Earl Baumgartner" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </section>
+
+        <section id="bulletin">
+            <h3><b>Memorial Bulletin:</b></h3>
+            </br></br>
+            <object data="/Earl_Memorial-12-17-23.pdf#page=2" type="application/pdf" style="width: min(70vw, 700px); height: min(80vw, 600px);">
+                <iframe src="../pdf/sample-3pp.pdf#page=2" style="width: min(50vw, 700px); height: min(80vh, 600px);" style="border: none;">
+                This browser does not support PDFs. Please download the PDF to view it: 
+                <a href="/Earl_Memorial-12-17-23.pdf">Download Memorial Bulletin PDF</a>
+                </iframe>
+            </object>
+        </section>
+    </div>
 
     <section id="dash">
         <p><b>A Life Well Lived - Anonymous</b></p>
