--- a/index.html
+++ b/index.html
@@ -63,17 +63,17 @@
     </section>
 
     <div class="memorial-wrapper">
-        <section id="livestream">
+        <section id="livestream" class="column">
             <h3><b>Memorial Service Livestream (starts 2pm Eastern time, Dec. 17th):</b></h3>
             </br></br>
             <iframe style="width: min(70vw, 700px); height: min(50vw, 394px);" src="https://www.youtube-nocookie.com/embed/tGOLw4KXITc?si=5Hp8RMMZdu11HnWl" title="Memorial Service for Earl Baumgartner" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </section>
 
-        <section id="bulletin">
+        <section id="bulletin" class="column">
             <h3><b>Memorial Bulletin:</b></h3>
             </br></br>
-            <object data="/Earl_Memorial-12-17-23.pdf#page=2" type="application/pdf" style="width: min(70vw, 700px); height: min(80vw, 600px);">
-                <iframe src="../pdf/sample-3pp.pdf#page=2" style="width: min(50vw, 700px); height: min(80vh, 600px);" style="border: none;">
+            <object data="/Earl_Memorial-12-17-23.pdf#page=2" type="application/pdf" style="width: min(45vw, 600px);height: min(95vh, 845px);">
+                <iframe src="../pdf/sample-3pp.pdf#page=2" style="width: min(45vw, 600px);height: min(95vh, 845px); border: none;">
                 This browser does not support PDFs. Please download the PDF to view it: 
                 <a href="/Earl_Memorial-12-17-23.pdf">Download Memorial Bulletin PDF</a>
                 </iframe>
