Compensate for pdf controls, add padding on fullscreen bulletin

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         <section id="bulletin" class="column">
             <h3><b>Memorial Bulletin:</b></h3>
             </br></br>
-            <object data="/Earl_Memorial-12-17-23.pdf#page=2" type="application/pdf" style="width: 100%;height: min(90vh, 600px);">
-                <iframe src="../pdf/sample-3pp.pdf#page=2" style="width: 100%;height: min(90vh, 600px); border: none;">
+            <object data="/Earl_Memorial-12-17-23.pdf#page=2" type="application/pdf" style="width: 100%;height: min(90vh, 631px);margin-top: -31px;">
+                <iframe src="../pdf/sample-3pp.pdf#page=2" style="width: 100%;height: min(90vh, 631px);margin-top: -31px; border: none;">
                 This browser does not support PDFs. Please download the PDF to view it: 
                 <a href="/Earl_Memorial-12-17-23.pdf">Download Memorial Bulletin PDF</a>
                 </iframe>
