--- a/index.html
+++ b/index.html
@@ -73,11 +73,13 @@
             <h3><b>Memorial Bulletin:</b></h3>
             </br></br>
             <object data="/Earl_Memorial-12-17-23.pdf#page=2" type="application/pdf" class="bulletin-embed">
-                <iframe src="../pdf/sample-3pp.pdf#page=2" class="bulletin-embed">
+                <iframe src="/Earl_Memorial-12-17-23.pdf#page=2" class="bulletin-embed">
                 This browser does not support PDFs. Please download the PDF to view it: 
                 <a href="/Earl_Memorial-12-17-23.pdf">Download Memorial Bulletin PDF</a>
                 </iframe>
             </object>
+            </br></br>
+            <a class="mobile-bulletin-download" href="/Earl_Memorial-12-17-23.pdf#page=2"></a>
         </section>
     </div>
 
