Add tribute video from Dave Morgan

--- a/index.html
+++ b/index.html
@@ -32,16 +32,24 @@
         </div>
     </div>
 
-    <section id="upload">
-        <h2><b>Have a message for Earl's family? Favorite memory or way Earl impacted your life? </br>Upload Video Tribute or Picture below:</b></h2>
+    <section id="tributes">
+        <h2><p><b>Tributes:</b></p></h2>
+        <div style="width: min(80vw, 700px);height: min(80vh, 394px); margin: 0 auto; text-align: center;">
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/884616727?h=312364b85c&title=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+        </div>
         </br>
+        <p>Mr. B. Gratitude Video from Dave Morgan (sent early November)</p>
+    </section>
+
+    <section id="upload">
+        <h2><b>Have a favorite memory or way Earl impacted your life? </br>Upload Video tribute or picture:</b></h2>
         </br>
         <div id="filesubmit">
             <label for="name_submitter">Your Name:</label></br>
             <input type="text" id="name_submitter" name="name_submitter"></br>
             <progress id="file_progress" max="100" value="0" style="display: none;"></progress></br>
             <div class="input_container">
-                <label id="files_label" for="files" class="button3">Record or Select Video or Photo</label></br>
+                <label id="files_label" for="files" class="button3">Record or select video or photo</label></br>
                 <input type="file" id="files" style="opacity:0;" class="file-select" accept="video/mp4,video/x-m4v,video/quicktime,video/*,audio/x-m4a,audio/*,image/*,.heic,.heif">
             </div>
             <!-- <input type="file" class="file-select" accept="video/mp4,video/x-m4v,video/quicktime,video/*,audio/x-m4a,audio/*,image/*,.heic,.heif"/> -->
