--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     </div>
 
     <section id="tributes">
-        <h2><p><b>Tributes:</b></p></h2>
-        <div style="width: min(80vw, 700px);height: min(80vh, 394px); margin: 0 auto; text-align: center;">
+        <h2><b>Tributes:</b></h2>
+        <div style="width: min(80vw, 700px); margin: 0 auto; text-align: center;">
             <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/884616727?h=312364b85c&title=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
         </div>
         </br>
