--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
 
         <section id="bulletin" class="column">
             <h3><b>Memorial Bulletin:</b></h3>
-            </br><a class="mobile-bulletin-download" href="/Earl_Memorial-12-17-23.pdf#page=2"></a></br>
-            <object data="/Earl_Memorial-12-17-23.pdf#page=2" type="application/pdf" class="bulletin-embed">
-                <iframe src="/Earl_Memorial-12-17-23.pdf#page=2" class="bulletin-embed">
+            </br><a class="mobile-bulletin-download" href="/EarlMemorial-12-17-2023.pdf#page=2"></a></br>
+            <object data="/EarlMemorial-12-17-2023.pdf#page=2" type="application/pdf" class="bulletin-embed">
+                <iframe src="/EarlMemorial-12-17-2023.pdf#page=2" class="bulletin-embed">
                 This browser does not support PDFs. Please download the PDF to view it: 
-                <a href="/Earl_Memorial-12-17-23.pdf">Download Memorial Bulletin PDF</a>
+                <a href="/EarlMemorial-12-17-2023.pdf">Download Memorial Bulletin PDF</a>
                 </iframe>
             </object>
         </section>
