--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
 </head>
 
 <body>
-    
-    
     <div class="container">
         <img class="heroimage" src="Earl.jpg">
    
@@ -29,16 +27,37 @@
                 Melville<br>
                 Baumgartner
             </h1>
+            <h2>MEMORIAL SERVICE</h2>
+            <h2>12•17•2023</h2>
+            <h2>2PM ET</h2>
         </div>
     </div>
 
-    <section id="tributes">
-        <h2><b>Tributes:</b></h2>
-        <div style="width: min(80vw, 700px); margin: 0 auto; text-align: center;">
-            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/884616727?h=312364b85c&title=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-        </div>
-        </br>
-        <p>Mr. B. Gratitude Video from Dave Morgan (sent early November)</p>
+    <div class="memorial-wrapper">
+        <section id="livestream" class="column">
+            <!-- <h3><b>Memorial Service Livestream (starts 2pm Eastern time, Dec. 17th):</b></h3> -->
+            </br></br>
+            <iframe style="width: 100%; height: min(80vh, 600px);" src="https://www.youtube-nocookie.com/embed/tGOLw4KXITc?si=5Hp8RMMZdu11HnWl" title="Memorial Service for Earl Baumgartner" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </section>
+
+        <section id="bulletin" class="column">
+            <!-- <h3><b>Memorial Bulletin:</b></h3> -->
+            </br><a class="mobile-bulletin-download" href="/EarlMemorial-12-17-2023.pdf#page=2"></a></br>
+            <object data="/EarlMemorial-12-17-2023.pdf#page=2" type="application/pdf" class="bulletin-embed">
+                <iframe src="/EarlMemorial-12-17-2023.pdf#page=2" class="bulletin-embed">
+                This browser does not support PDFs. Please download the PDF to view it: 
+                <a href="/EarlMemorial-12-17-2023.pdf">Download Memorial Bulletin PDF</a>
+                </iframe>
+            </object>
+        </section>
+    </div>
+
+    <section id="directions">
+        <!-- <h3><b>Memorial Service at 2PM Eastern time, December 17th, 2023:</b></h3> -->
+        <!-- </br></br> -->
+        <h2>Lansdale Seventh-day Adventist Church </br>887 Troxel Rd.</br>Lansdale, PA 19446</h2>
+        </br></br>
+        <iframe style="border:0; width: min(70vw, 600px); height: min(50vw, 394px);" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3045.3052994359696!2d-75.31824148800821!3d40.24674586584798!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6a23dafc4270b%3A0x82f390175b00c2bd!2sLansdale%20Seventh-Day%20Adventist%20Church!5e0!3m2!1sen!2sus!4v1702393365444!5m2!1sen!2sus" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
 
     <section id="upload">
@@ -62,32 +81,14 @@
         </div>
     </section>
 
-    <section id="directions">
-        <h3><b>Memorial Service at 2PM Eastern time, December 17th, 2023:</b></h3>
-        </br></br>
-        <h2>Lansdale Seventh-day Adventist Church </br>887 Troxel Rd.</br>Lansdale, PA 19446</h2>
-        </br></br>
-        <iframe style="border:0; width: min(70vw, 600px); height: min(50vw, 394px);" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3045.3052994359696!2d-75.31824148800821!3d40.24674586584798!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6a23dafc4270b%3A0x82f390175b00c2bd!2sLansdale%20Seventh-Day%20Adventist%20Church!5e0!3m2!1sen!2sus!4v1702393365444!5m2!1sen!2sus" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <section id="tributes">
+        <h2><b>Tributes:</b></h2>
+        <div style="width: min(80vw, 700px); margin: 0 auto; text-align: center;">
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/884616727?h=312364b85c&title=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+        </div>
+        </br>
+        <p>Mr. B. Gratitude Video from Dave Morgan (sent early November)</p>
     </section>
-
-    <div class="memorial-wrapper">
-        <section id="livestream" class="column">
-            <h3><b>Memorial Service Livestream (starts 2pm Eastern time, Dec. 17th):</b></h3>
-            </br></br>
-            <iframe style="width: 100%; height: min(80vh, 600px);" src="https://www.youtube-nocookie.com/embed/tGOLw4KXITc?si=5Hp8RMMZdu11HnWl" title="Memorial Service for Earl Baumgartner" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </section>
-
-        <section id="bulletin" class="column">
-            <h3><b>Memorial Bulletin:</b></h3>
-            </br><a class="mobile-bulletin-download" href="/EarlMemorial-12-17-2023.pdf#page=2"></a></br>
-            <object data="/EarlMemorial-12-17-2023.pdf#page=2" type="application/pdf" class="bulletin-embed">
-                <iframe src="/EarlMemorial-12-17-2023.pdf#page=2" class="bulletin-embed">
-                This browser does not support PDFs. Please download the PDF to view it: 
-                <a href="/EarlMemorial-12-17-2023.pdf">Download Memorial Bulletin PDF</a>
-                </iframe>
-            </object>
-        </section>
-    </div>
 
     <section id="dash">
         <p><b>A Life Well Lived - Anonymous</b></p>
