Add hidden eulogy and footer image, rearrange sections

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <a href="#" id="nextBtn" onclick="return nextImage()"><i class="fas fa-arrow-right"></i></a>
       </div>
 
-        <BR><h2><strong>Touch photo. Please press play/pause button one time to start slideshow.<br>Wait 5 seconds for the next picture to appear.</strong></h2>
+        <BR><h2>Press play/pause button one time to start or stop slideshow.<br>Wait 5 seconds for the next picture to appear.</h2>
     </section>
 
     <section id="upload">
@@ -102,7 +102,24 @@
             <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/884616727?h=312364b85c&title=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
         </div>
         </br>
-        <p>Mr. B. Gratitude Video from Dave Morgan (sent early November)</p>
+        <!-- <p>Mr. B. Gratitude Video from Dave Morgan (sent early November)</p> -->
+    </section>
+
+    <section id="eulogy">
+        <div id="text-box">
+            <div id="eulogy-box">
+              <h2><b>Eulogy (read by Rick Baumgartner)</b></h2></br>
+              <p>Today we remember the remarkable life of my dad Earl Melville Baumgartner. He was born in Collegeville, PA, on November 17, 1934, to Charles and Maud Baumgartner. He shared many wonderful memories with his older sister Dorthy and younger sister Evelyn. Growing up on Germantown Pike, Dad's childhood was filled with lots of family, farm activities, and a strong Pennsylvania Dutch heritage. </p>
+              <p>His educational journey took him to Philadelphia Academy, Shenandoah Valley Academy, and finally Temple University. Cars, roller skating, and owning an airplane defined Dad's youth. From racing a Dodge with triple duces to doing the two-step backwards on skates, Dad loved to have fun.</p>
+              <p>He had a strong work ethic that emerged early. His first job was swatting flies in Uncle Powell’s dairy, later he paid for his parents' driveway to be paved by the age of 13. In his career he worked as a devoted heating, ventilation, and airconditioning teacher at Montgomery County’s Technical High School for over 30 years.</p>
+              <p>Dad's life was marked by moments where his guardian angel worked overtime—from a severe childhood accident to a perilous fall from a roof as an adult. Dad proved resilient, and God allowed him to walk again giving him energy and health for a full life of service.</p>
+              <p>Dad believed in service to others. He embraced projects like building the Adventist Community Services Center. He participated in two mission trips himself, and supported many youth to attend mission trips. Dad was a lifelong Pathfinder, known as “The Cotton Candy Man” and “Mr. Pathfinder” to many.</p>
+              <p>Dad moved several times, making new memories in each place. From Rahns to Ridge Pike, then finally moving to Mt. Kirk Avenue. Each home held its unique memories, including — encounters with pet raccoons in Nana's garage, litters of kittens on the Mile Hill, and many renovations with necessary breaks to drink chocolate milk.</p>
+              <p>With endless energy, Dad loved working in the yard, planting azaleas and saplings on his four acre home on Mt. Kirk Avenue. He delighted in heading out on camping and canoeing trips each season with Blue Mountain Academy, Huntingdon Valley Christian Academy, and local church groups.</p>
+              <p>Dad served in the Fairview Village and Lansdale Seventh-day Adventist churches. In the youth Sabbath School, he enjoyed creating quizzes and games to keep his kids engaged and learning. He enthusiastically served as Elder for many years and especially enjoyed giving Bible studies and taking communion to shut-ins.</p>
+              <p>As we bid farewell to Dad, let us remember a man who navigated life with resilience, humor, and an unyielding commitment to his Lord and Savior. May his legacy inspire us to think positively in the face of adversity, serve those around us, and point others to the King of Kings.</p>
+            </div>
+        </div>
     </section>
 
     <section id="dash">
@@ -135,7 +152,8 @@
         <p>May Earl rest in peace and his legacy of service live on in the hearts of those he touched.</p>
     </section>
 
-    <footer>    
+    <footer>
+        <img src="/CUNHAVN.jpg" style="width: min(70vw, 600px); height: min(50vw, 305px); margin: 0 auto; text-align: center;"/> 
     </footer>
 
     <script src="script.js"></script>
